Use correct font-size for rename and avoid flickering

--- a/src/themes/default/scss/fsLayoutLeft/_fsBrowser.scss
+++ b/src/themes/default/scss/fsLayoutLeft/_fsBrowser.scss
@@ -185,6 +185,14 @@
           .fs-ext {
             text-transform: uppercase;
           }
+
+          .fs-filename-rename {
+            font-size: 15px;
+            line-height: 17px;
+            padding: 5px 6px 6px 6px;
+            margin-top: -3px;
+            margin-left: -7px;
+          }
         }
 
         .fs-browser-column-meta {
